# empirica_traveling_flame

./: .gitignore  README.md  Tpsi_diff_exp.ipynb  generate_mesh.py
3d_models/models-gutter-cube-edges/: gutter-d3-l25.stl  gutter-d9-l25.stl
chemistry/: adiabatic_flame.csv  adiabatic_flame.h5  cycling_model.ipynb  equalibrium.py  fit_one_step.ipynb  flame_speed.py  flame_speed2.py  flame_speed_notebook.ipynb  flame_speed_notebook_copy.ipynb  flame_speed_plots.ipynb  flame_speed_plots_calc.pickle  one_step_chemistry.ipynb  phase_diagram.ipynb  reaction_path.py
chemistry/flames/: ethanol-marinov.yaml.0.res.hdf  ethanol-marinov.yaml.1.res.hdf  ethanol-marinov.yaml.2.res.hdf  ethanol-marinov.yaml.3.res.hdf  ethanol-marinov.yaml.4.res.hdf  ethanol-marinov.yaml.5.res.hdf  ethanol-marinov.yaml.6.res.hdf  ethanol-marinov.yaml.7.res.hdf  ethanol-marinov.yaml.8.res.hdf  ethanol-marinov.yaml.9.res.hdf  ethanol-marinov.yaml.res.hdf  ethanol66.yaml.0.res.hdf  ethanol66.yaml.1.res.hdf  ethanol66.yaml.2.res.hdf  ethanol66.yaml.3.res.hdf  ethanol66.yaml.4.res.hdf  ethanol66.yaml.5.res.hdf  ethanol66.yaml.6.res.hdf  ethanol66.yaml.7.res.hdf  ethanol66.yaml.8.res.hdf  ethanol66.yaml.9.res.hdf
models-gutter-cube-edges/: gutter-d5-l25.stl  gutter-d7-l25.stl
models-gutter-round-edges/: gutter-round-d3-l25.stl  gutter-round-d5-l25.stl  gutter-round-d7-l25.stl  gutter-round-d9-l25.stl
openfoam_cases/: .gitignore  README.md  proc_xifooams.sh  run_xifoams.sh  task.txt
openfoam_cases/1D_T_FLAME/: .gitignore  prep.sh
openfoam_cases/3D_rect_tube_T_FLAME/: .gitignore  prep.sh
openfoam_cases/3D_rect_tube_T_FLAME_ethanol/: prep.sh
utils/: modify_mesh_boundary.py
utils/etf_field_init_xi/: CMakeLists.txt
utils/etf_field_init_xi/Make/: files  options
utils/etf_field_init_xi/cmake/: OpenFOAM.cmake
utils/etf_field_init_xi/src/: etf_field_init_xi.C
utils_cfd_proc/: plot.ipynb  plot_xifoams.ipynb
video_proc/: exp_height_vs_velocity.csv  proc_cyclic_video.py  proc_tracks.ipynb  process_chrono.ipynb
videos/: .gitignore
(+338 files in other folders)
